[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
numpy = "^1.26.3"
graphviz = "^0.20.1"
pillow = "^10.2.0"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
ruff = "^0.1.13"

[tool.ruff]
target-version = "py312"
extend-select = ["I"]
exclude = ["src/code_analysis"]
